# graphql-id

./: .editorconfig  .travis.yml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
examples/: pet.graphql
src/: ast.rs  bin.rs  error.rs  lib.rs  traverse.rs  visitor.rs  wrappers.rs
tests/: id_generation_test.rs  select_operation_test.rs  visitor_test.rs
