[package]
name = "graphql-id"
version = "0.1.0"
authors = ["Boopathi Rajaa <me@boopathi.in>"]
description = "Generate an id for a GraphQL Query"
license = "MIT/Apache-2.0"
homepage = "https://github.com/boopathi/graphql-id"
repository = "https://github.com/boopathi/graphql-id"
documentation = "https://docs.rs/graphql-id/0.1.0/graphql_id/"
exclude = [
  "tests/**/*",
  "examples/**/*"
]

[dependencies]
graphql-parser = "0.2.2"
rust-crypto = "0.2.36"
clap = "2.32.0"
itertools = "0.7.8"

[lib]
name = "graphql_id"
path = "src/lib.rs"

[[bin]]
name = "graphql-id"
path = "src/bin.rs"
